{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 45,
  "lineage": "7b525ff9-acfa-4553-8c85-6b2b94569a8d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ec96444500f500a",
            "association_id": "eipassoc-03440f27b755f6aad",
            "domain": "vpc",
            "id": "eipalloc-01ec96444500f500a",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-00f8e959ac390280f",
            "private_dns": "ip-10-0-0-100.ap-southeast-2.compute.internal",
            "private_ip": "10.0.0.100",
            "public_dns": "ec2-3-106-42-131.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.42.131",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:internet-gateway/igw-0835ae9b0d94b0b82",
            "id": "igw-0835ae9b0d94b0b82",
            "owner_id": "291208963174",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:loadbalancer/app/tf-lb-20230903044350293600000004/1d4e76ddf89d432f",
            "arn_suffix": "app/tf-lb-20230903044350293600000004/1d4e76ddf89d432f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20230903044350293600000004-1352919359.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:loadbalancer/app/tf-lb-20230903044350293600000004/1d4e76ddf89d432f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20230903044350293600000004",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0acdcfd6cd6656df6",
              "sg-0c5b93f6f91bdd4b0",
              "sg-0eeb80502f28d240a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0701271d8bbe161f5"
              },
              {
                "subnet_id": "subnet-0d295b46db0b4979c"
              }
            ],
            "subnets": [
              "subnet-0701271d8bbe161f5",
              "subnet-0d295b46db0b4979c"
            ],
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-07533465c6e4cfd0d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:listener/app/tf-lb-20230903044350293600000004/1d4e76ddf89d432f/ace6fdb1a9f8eb96",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:targetgroup/tf-20230903044552007400000005/e992d5dae212f2c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:listener/app/tf-lb-20230903044350293600000004/1d4e76ddf89d432f/ace6fdb1a9f8eb96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:loadbalancer/app/tf-lb-20230903044350293600000004/1d4e76ddf89d432f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:targetgroup/tf-20230903044552007400000005/e992d5dae212f2c5",
            "arn_suffix": "targetgroup/tf-20230903044552007400000005/e992d5dae212f2c5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:targetgroup/tf-20230903044552007400000005/e992d5dae212f2c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20230903044552007400000005",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_lb.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ec96444500f500a",
            "association_id": "eipassoc-03440f27b755f6aad",
            "connectivity_type": "public",
            "id": "nat-04fbadbe2b0c6c7cf",
            "network_interface_id": "eni-00f8e959ac390280f",
            "private_ip": "10.0.0.100",
            "public_ip": "3.106.42.131",
            "subnet_id": "subnet-0701271d8bbe161f5",
            "tags_all": {
              "example": "example-terraform-ecs"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b544f9d2ac6831e11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04fbadbe2b0c6c7cf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b544f9d2ac6831e1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0835ae9b0d94b0b82",
            "id": "r-rtb-0ba04f61f3e150c181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba04f61f3e150c18",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:route-table/rtb-0b544f9d2ac6831e1",
            "id": "rtb-0b544f9d2ac6831e1",
            "owner_id": "291208963174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04fbadbe2b0c6c7cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:route-table/rtb-0ba04f61f3e150c18",
            "id": "rtb-0ba04f61f3e150c18",
            "owner_id": "291208963174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0835ae9b0d94b0b82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02203250e59eee00e",
            "route_table_id": "rtb-0b544f9d2ac6831e1",
            "subnet_id": "subnet-0fa98a58876f17947"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04282bf8123bd8c8b",
            "route_table_id": "rtb-0b544f9d2ac6831e1",
            "subnet_id": "subnet-0e4c446b48aa778bf"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055ae26b918bc082d",
            "route_table_id": "rtb-0ba04f61f3e150c18",
            "subnet_id": "subnet-0701271d8bbe161f5"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b007e112a2c79e20",
            "route_table_id": "rtb-0ba04f61f3e150c18",
            "subnet_id": "subnet-0d295b46db0b4979c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:security-group/sg-0eeb80502f28d240a",
            "description": "Permit all outgoing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eeb80502f28d240a",
            "ingress": [],
            "name": "egress-all",
            "name_prefix": "",
            "owner_id": "291208963174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:security-group/sg-0acdcfd6cd6656df6",
            "description": "Permit incoming HTTP traffic",
            "egress": [],
            "id": "sg-0acdcfd6cd6656df6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "291208963174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:security-group/sg-0c5b93f6f91bdd4b0",
            "description": "Permit incoming HTTPS traffic",
            "egress": [],
            "id": "sg-0c5b93f6f91bdd4b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https",
            "name_prefix": "",
            "owner_id": "291208963174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:security-group/sg-05c210bc5d96a989f",
            "description": "Permit some incoming traffic",
            "egress": [],
            "id": "sg-05c210bc5d96a989f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ingress-esc-service",
            "name_prefix": "",
            "owner_id": "291208963174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:subnet/subnet-0fa98a58876f17947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa98a58876f17947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291208963174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:subnet/subnet-0e4c446b48aa778bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4c446b48aa778bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291208963174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:subnet/subnet-0701271d8bbe161f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0701271d8bbe161f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291208963174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:subnet/subnet-0d295b46db0b4979c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d295b46db0b4979c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291208963174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-07533465c6e4cfd0d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:vpc/vpc-07533465c6e4cfd0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fdfae125b7772da6",
            "default_route_table_id": "rtb-0f2c52566b7d957a0",
            "default_security_group_id": "sg-011322ebdd40734cf",
            "dhcp_options_id": "dopt-0c00362e3fc2fd64b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07533465c6e4cfd0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2c52566b7d957a0",
            "owner_id": "291208963174",
            "tags_all": {
              "example": "example-terraform-ecs"
            }
          }
        }
      ]
    }
  ]
}